--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -4,32 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Sign Up</h1>
+<div class="container">
+    <h2>Sign Up</h2>
+    <form id="signupForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
 
-<!-- 회원가입 폼 -->
-<form id="signup-form" method="POST">
-<!--    위의 form 태그 안에 (method="POST") 없어서 로그인 페이지로 안 넘어갔었음.-->
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
 
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
 
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
+        <button type="submit">Sign Up</button>
+    </form>
+    <p>Already have an account? <a href="login.html">Log in here</a></p>
+</div>
 
-    <button type="submit">Sign Up</button>
-</form>
-
-
-<br>
-
-<!-- 로그인 페이지로 이동하는 버튼 -->
-<button onclick="location.href='/login.html'">Already have an account? Log in here</button>
-
-<script src="/js/signup.js"></script> <!-- signup.js 파일 불러오기 -->
+<script src="js/signup.js"></script>
 </body>
 </html>
