--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -11,15 +11,9 @@
 
 <!-- 회원가입 폼 -->
 <form id="signup-form">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
-
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
-
+    <input type="text" id="name" name="name" placeholder="Name" required>
+    <input type="email" id="email" name="email" placeholder="Email" required>
+    <input type="password" id="password" name="password" placeholder="Password" required>
     <button type="submit">Sign Up</button>
 </form>
 
@@ -28,6 +22,6 @@
 <!-- 로그인 페이지로 이동하는 버튼 -->
 <button onclick="location.href='/login.html'">Already have an account? Log in here</button>
 
-<script src="/js/signup.js"></script> <!-- signup.js 파일 불러오기 -->
+<script src="/js/signup.js"></script>
 </body>
 </html>
