--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,7 +6,6 @@
     <title>Login</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        /* 구글 로그인 버튼 스타일 */
         .google-btn {
             width: 190px;
             height: 40px;
@@ -38,14 +37,9 @@
 <body>
 <h1>Login</h1>
 
-<!-- 로그인 폼 -->
-<form id="login-form" action="/login" method="POST">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
-
+<form id="login-form" method="POST" action="/api/user/login">
+    <input type="email" name="email" placeholder="Email" required />
+    <input type="password" name="password" placeholder="Password" required />
     <button type="submit">Login</button>
 </form>
 
@@ -55,12 +49,11 @@
 
 <br><br>
 
-<!-- Google 로그인 버튼 -->
 <a href="/oauth2/authorization/google" class="google-btn">
     <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">
     <span>Sign in with Google</span>
 </a>
 
-<script src="/js/login.js"></script>  <!-- JavaScript 파일 포함 -->
+<script src="/js/login.js"></script>
 </body>
 </html>
