--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -16,11 +16,9 @@
     <li><a href="/faq.html">FAQ</a></li>
 </ul>
 
-<!-- 로그아웃 버튼 -->
 <button id="logout-btn">Logout</button>
 
-<!-- JavaScript는 login.js에 포함됨 -->
-<script src="/js/login.js"></script>
+<script src="/js/home.js"></script>
 
 </body>
 </html>
