--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="/css/signup.css">
 </head>
 <body>
 <div class="container">
@@ -25,7 +25,10 @@
         <button type="submit" class="btn">회원가입</button>
     </form>
     <div id="message" class="message"></div>
+    <p class="redirect-text">
+        이미 계정이 있으신가요? <a href="/login.html">로그인 페이지</a>로 이동하세요.
+    </p> <!-- 추가된 부분 -->
 </div>
-<script src="signup.js"></script>
+<script src="/js/signup.js"></script>
 </body>
 </html>
