--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,57 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <style>
-        .google-btn {
-            width: 190px;
-            height: 40px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-decoration: none;
-        }
-
-        .google-btn img {
-            width: 20px;
-            margin-right: 10px;
-        }
-
-        .google-btn span {
-            color: #757575;
-            font-size: 14px;
-        }
-
-        .google-btn:hover {
-            box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
-        }
-    </style>
+    <title>로그인</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-<h1>Login</h1>
-
-<form id="login-form" method="POST" action="/api/user/login">
-    <input type="email" name="email" placeholder="Email" required />
-    <input type="password" name="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-</form>
-
-<br><br>
-
-<button onclick="location.href='/signup.html'">You didn't register an account? Go to Signup Page!</button>
-
-<br><br>
-
-<a href="/oauth2/authorization/google" class="google-btn">
-    <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">
-    <span>Sign in with Google</span>
-</a>
-
+<div class="container">
+    <h1>로그인</h1>
+    <form id="loginForm">
+        <div class="form-group">
+            <label for="email">이메일</label>
+            <input type="email" id="email" name="email" placeholder="이메일을 입력하세요" required>
+        </div>
+        <div class="form-group">
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요" required>
+        </div>
+        <button type="submit" class="btn">로그인</button>
+    </form>
+    <div id="message" class="message"></div>
+    <p class="redirect-text">
+        아직 회원가입을 안 하셨다면, <a href="/signup.html">회원가입 페이지</a>로 이동하세요.
+    </p>
+</div>
 <script src="/js/login.js"></script>
 </body>
 </html>
