--- a/src/main/resources/static/posts.html
+++ b/src/main/resources/static/posts.html
@@ -10,8 +10,9 @@
 <header>
     <h1>게시물 목록</h1>
     <div class="button-container">
-        <button id="createPostButton">게시물 작성하기</button>
-        <button id="editPostButton">게시물 편집하기</button>
+        <button id="createPostButton">게시물 작성</button>
+        <button id="editPostButton">게시물 편집</button>
+        <button id="homeButton">홈으로 돌아가기</button>
     </div>
 </header>
 <main>
