--- a/src/main/resources/static/faq.html
+++ b/src/main/resources/static/faq.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/faq.css">
 </head>
 <body>
-
-<h1>FAQ</h1>
-<form id="faq-form">
-    <input type="text" id="faq-question" placeholder="Question" required><br>
-    <textarea id="faq-answer" placeholder="Answer" required></textarea><br>
-    <button type="submit">Submit FAQ</button>
-</form>
-
-<ul id="faq-list"></ul>
-
-<h3>Menu</h3>
-
-<ul>
-    <li><a href="/home.html">Home</a></li>
-    <li><a href="/posts.html">Posts</a></li>
-    <li><a href="/notices.html">Notices</a></li>
-</ul>
-
-<script src="/js/user.js"></script>
+<header>
+    <h1>FAQ</h1>
+    <button id="createFaqButton">FAQ 작성</button>
+    <button id="manageFaqButton">FAQ 관리</button>
+</header>
+<main>
+    <div class="filter-container">
+        <label for="categoryFilter">카테고리:</label>
+        <select id="categoryFilter">
+            <option value="">전체</option>
+            <option value="GENERAL">일반 질문</option>
+            <option value="TECHNICAL_SUPPORT">기술 지원</option>
+            <option value="ACCOUNT_MANAGEMENT">계정 관리</option>
+            <option value="BILLING">결제 관련</option>
+        </select>
+    </div>
+    <ul id="faqList">
+        <!-- FAQ 목록이 렌더링됩니다 -->
+    </ul>
+    <p id="errorMessage"></p>
+</main>
+<footer>
+    <small>© 2024 Findable</small>
+</footer>
+<script src="/js/faq.js"></script>
 </body>
 </html>
