--- a/src/main/resources/static/faq.html
+++ b/src/main/resources/static/faq.html
@@ -9,9 +9,13 @@
 <body>
 <header>
     <h1>FAQ</h1>
-    <button id="createFaqButton">FAQ 작성</button>
-    <button id="manageFaqButton">FAQ 관리</button>
+    <div class="button-group">
+        <button id="createFaqButton">FAQ 작성</button>
+        <button id="manageFaqButton">FAQ 관리</button>
+        <button id="homeButton">홈으로 이동</button>
+    </div>
 </header>
+
 <main>
     <div class="filter-container">
         <label for="categoryFilter">카테고리:</label>
