--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -14,16 +14,15 @@
     </header>
     <main>
         <h2 id="welcomeMessage">환영합니다!</h2>
-        <p>이 페이지는 인증된 사용자만 접근할 수 있습니다.</p>
+        <p>원하는 게시물을 저장하고, 편하게 찾아보세요!</p>
         <button id="goToPostsBtn" class="btn">게시물 페이지로 이동</button>
         <button id="goToNoticesBtn" class="btn">공지사항 페이지로 이동</button>
-        <button id="goToFaqBtn" class="btn">FAQ 페이지로 이동</button> <!-- FAQ 이동 버튼 추가 -->
+        <button id="goToFaqBtn" class="btn">FAQ 페이지로 이동</button>
 
-        <!-- 공지사항 섹션 -->
         <section id="noticeSection">
             <h3>공지사항</h3>
             <ul id="noticeList">
-                <!-- 공지사항이 렌더링됩니다 -->
+
             </ul>
             <p id="noticeErrorMessage"></p>
         </section>
