--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
     <link rel="stylesheet" href="/css/login.css">
+    <style>
+        .google-btn {
+            width: 190px;
+            height: 40px;
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            margin: 15px auto;
+            font-size: 14px;
+        }
+
+        .google-btn img {
+            width: 20px;
+            margin-right: 10px;
+        }
+
+        .google-btn span {
+            color: #757575;
+        }
+
+        .google-btn:hover {
+            box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+        }
+
+        .oauth-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -20,6 +54,12 @@
         </div>
         <button type="submit" class="btn">로그인</button>
     </form>
+<!--    <div class="oauth-container">-->
+<!--        <a href="/oauth2/authorization/google" class="google-btn">-->
+<!--            <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">-->
+<!--            <span>Sign in with Google</span>-->
+<!--        </a>-->
+<!--    </div>-->
     <div id="message" class="message"></div>
     <p class="redirect-text">
         아직 회원가입을 안 하셨다면, <a href="/signup.html">회원가입 페이지</a>로 이동하세요.
