--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -20,20 +20,16 @@
             margin: 15px auto;
             font-size: 14px;
         }
-
         .google-btn img {
             width: 20px;
             margin-right: 10px;
         }
-
         .google-btn span {
             color: #757575;
         }
-
         .google-btn:hover {
             box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
         }
-
         .oauth-container {
             text-align: center;
             margin-top: 20px;
@@ -54,12 +50,12 @@
         </div>
         <button type="submit" class="btn">로그인</button>
     </form>
-<!--    <div class="oauth-container">-->
-<!--        <a href="/oauth2/authorization/google" class="google-btn">-->
-<!--            <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">-->
-<!--            <span>Sign in with Google</span>-->
-<!--        </a>-->
-<!--    </div>-->
+    <div class="oauth-container">
+        <a href="/oauth2/authorization/google" class="google-btn">
+            <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">
+            <span>Sign in with Google</span>
+        </a>
+    </div>
     <div id="message" class="message"></div>
     <p class="redirect-text">
         아직 회원가입을 안 하셨다면, <a href="/signup.html">회원가입 페이지</a>로 이동하세요.
